# django-tutorial

./: .gitignore  pyproject.toml
mysite/: settings.py  urls.py
polls/: models.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py  0002_choice.py
polls/templates/polls/: detail.html  index.html  results.html
