[tool.poetry]
name = "django-tutorial"
version = "0.1.0"
description = ""
authors = ["Jaspreet Singh <jaspreet159939@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
django-extensions = "^3.2.0"
ipython = "^8.4.0"
black = "^22.6.0"
djlint = "^1.7.1"
pylint = "^2.14.5"
coverage = "^6.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.djlint]
profile = "django"
